@@ -1,10 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.448 2005/10/27 02:29:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.449 2005/10/30 22:08:58 codeman Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
+  30 Oct 2005; Preston Cody <codeman@gentoo.org>
+  webgli: networking and users screens
+  added return_redirect to handler.py
+  
+  
   26 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
   properly check for bootloader emerge exist status with exitsuccess()
